--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -1,57 +1,56 @@
 .card {
+  &__title {
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 47px;
+      margin-bottom: 18px;
+      margin-top: 16px;
+      margin-left: 30px;
+      color: #282a30;
+      text-transform: uppercase;
+  }
 
-    &__title {
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 47px;
-        margin-bottom: 18px;
-        margin-top: 16px;
-        margin-left: 30px;
-        color: #282a30;
-        text-transform: uppercase;
-      }
+  &__recommended-heading {
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 47px;
+      margin-bottom: 18px;
+      margin-top: 16px;
+      margin-left: 30px;
+      color: #282a30;
+      text-transform: uppercase;
+  }
 
-      &__recommended-heading {
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 47px;
-        margin-bottom: 18px;
-        margin-top: 16px;
-        margin-left: 30px;
-        color: #282a30;
-        text-transform: uppercase;
-      }
+  &__divider {
+      border: 1px solid #e5e5e5;
+      margin: 23px 30px;
+  }
 
-      &__divider {
-        border: 1px solid #e5e5e5;
-        margin: 23px 30px;
-      }
-    
-    &__controls {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 1rem;
-      }
-    
-      &__acc {
-        display: flex;
-        align-items: center;
-        margin-left: 30px;
-    
-        & .card__link {
+  &__controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+  }
+
+  &__acc {
+      display: flex;
+      align-items: center;
+      margin-left: 30px;
+
+      & .card__link {
           font-weight: 400;
           font-size: 16px;
           line-height: 18px;
           margin-right: 8px;
           color: #9c9c9c;
-        }
-    
-        & .card__link--highlight {
+      }
+
+      & .card__link--highlight {
           color: #28553f;
-        }
-    
-        & .card__arrow {
+      }
+
+      & .card__arrow {
           display: inline-block;
           width: 0;
           height: 0;
@@ -59,48 +58,72 @@
           border-bottom: 5px solid transparent;
           border-left: 5px solid #9c9c9c;
           margin-right: 4px;
-        }
-    
-        & .highlight {
-          color: #28553f;
-        }
       }
 
-      &__header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 30px;
+      & .highlight {
+          color: #28553f;
+      }
+  }
 
-        & .card__info {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            margin-right: 30px;
-            gap: 10px;
-
-            & .card__model,
-            & .card__article {
-                font-weight: 500;
-                font-size: 16px;
-                line-height: 25px;
-                color: #28553F;
-                
-            }
-        }
-    }
-
-    &__recommended {
+  &__header {
       display: flex;
-      flex-direction:column;
-      background-color: #F9F9F9;
-      padding-left: 34px;
+      justify-content: space-between;
+      align-items: center;
+      margin: 30px;
+
+      & .card__info {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          margin-right: 30px;
+          gap: 10px;
+
+          & .card__model,
+          & .card__article {
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 25px;
+              color: #28553F;
+          }
+      }
+  }
+
+  &__description-box {
+margin-left: 28px;
+  }
+
+  &__description-heading {
+    display: flex;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 25px;
+
+    & h3 {
+      padding-bottom:3px;
      
-    }
-
-    &__recommended-gallery {
-      display: flex;
     }
 }
 
+&__description-arrow {
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid;
+    margin-left: 5px;
+    margin-top:9px;
+   
 
+}
+
+  &__recommended {
+      display: flex;
+      flex-direction: column;
+      background-color: #F9F9F9;
+      padding-left: 34px;
+  }
+
+  &__recommended-gallery {
+      display: flex;
+  }
+}
