--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -88,6 +88,33 @@
     }
   }
 
+ &__tabs {
+  display:flex;
+  margin-left: 30px;
+  margin-right: 30px;
+  gap: 30px;
+
+  &-item {
+    flex: 1; 
+
+    & .card__tabs-desc {
+      margin-top: 50px; 
+    }
+  }
+ }
+
+ &__tabs-title {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 25px;
+}
+
+&__tabs-desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+}
+
   &__description-box {
     margin-left: 28px;
   }
@@ -118,6 +145,7 @@
     font-size: 16px;
     line-height: 30px;
     max-width: 1131px;
+    margin-bottom: 60px;
   }
 
   &__recommended {
