--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -93,6 +93,17 @@
   margin-left: 30px;
   margin-right: 30px;
   gap: 30px;
+  position:relative;
+
+  &::before {
+    content: ''; 
+    position: absolute; 
+    top: 35%; 
+    left: 0;  
+    right: 0; 
+    border:1px solid #e5e5e5;
+    z-index: 1; 
+  }
 
   &-item {
     flex: 1; 
@@ -153,6 +164,7 @@
     flex-direction: column;
     background-color: #f9f9f9;
     padding-left: 34px;
+    margin-top: 100px;
   }
 
   &__recommended-gallery {
