--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,9 +14,11 @@
 @import './blocks/contacts';
 @import './blocks/footer';
 @import './blocks/cardpreview';
+@import './blocks/swiper';
 
 
 /*Other Pages Styles*/
 @import './otherpages/card';
 @import './otherpages/catalogue';
 @import './otherpages/errorpage';
+
