--- a/src/css/main.css
+++ b/src/css/main.css
@@ -731,12 +731,26 @@ legend {
 }
 
 .swiper {
-  width: 603px;
+  width: 510px !important;
   height: 100%;
 }
 
 .swiper-slide {
-  margin-right: 10px;
+  margin-right: 15px !important;
+  width: 117px !important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  border: 1px solid;
+}
+
+.swiper-button-next {
+  right: 30% !important;
+}
+
+.swiper-button-prev {
+  left: 30% !important;
 }
 
 @media (max-width: 760px) {
@@ -825,6 +839,9 @@ legend {
   font-size: 16px;
   line-height: 25px;
   color: #28553f;
+}
+.card__sliderbox {
+  position: relative;
 }
 .card__tabs {
   display: flex;
