--- a/src/css/main.css
+++ b/src/css/main.css
@@ -731,12 +731,11 @@ legend {
 }
 
 .swiper {
-  width: 510px !important;
+  width: 510px;
   height: 100%;
 }
 
 .swiper-slide {
-  margin-right: 15px !important;
   width: 117px !important;
 }
 
