--- a/src/styles/blocks/_swiper.scss
+++ b/src/styles/blocks/_swiper.scss
@@ -1,7 +1,7 @@
 
 
   .swiper {
-    width: 510px !important;
+    width: 510px;
     height: 100%;
    
 
@@ -9,7 +9,6 @@
 
 
   .swiper-slide {
-    margin-right:15px !important;
     width: 117px !important;
   }
 
