--- a/src/css/main.css
+++ b/src/css/main.css
@@ -745,7 +745,7 @@ legend {
   height: 103px !important;
   width: 27px !important;
   background-color: #f9f9f9;
-  transform: translateY(-29%);
+  transform: translateY(-27%);
   position: relative;
 }
 
@@ -755,11 +755,11 @@ legend {
 }
 
 .swiper-button-next {
-  right: 30% !important;
+  right: 1% !important;
 }
 
 .swiper-button-prev {
-  left: 30% !important;
+  left: 0 !important;
 }
 
 @media (max-width: 760px) {
@@ -849,8 +849,14 @@ legend {
   line-height: 25px;
   color: #28553f;
 }
+.card__actionblock {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
 .card__sliderbox {
   position: relative;
+  max-width: 610px;
 }
 .card__tabs {
   display: flex;
