--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -88,6 +88,11 @@
     }
   }
 
+  &__available {
+    display: flex;
+    gap: 38px;
+  }
+
   &__actionblock {
     display:flex;
     flex-direction:column;
@@ -97,6 +102,17 @@
   &__sliderbox {
     position: relative;
     max-width:610px;
+  }
+
+  &__available-info {
+
+     span {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 28px;
+      color:#28553F;
+      margin-left: 8px;
+     }
   }
 
 
@@ -140,6 +156,7 @@
 
   &__description-box {
     margin-left: 28px;
+    margin-top:75px;
   }
 
   &__description-heading {
