--- a/src/css/main.css
+++ b/src/css/main.css
@@ -869,6 +869,56 @@ legend {
   color: #28553F;
   margin-left: 8px;
 }
+.card__available-info .card__quantity-selector {
+  display: flex;
+  align-items: center;
+}
+.card__available-info .card__quantity-selector .card__quantity-button {
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #9c9c9c;
+  background-color: #fff;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.card__available-info .card__quantity-selector .card__quantity-button:hover {
+  background-color: #f0f0f0;
+}
+.card__available-info .card__quantity-selector .card__quantity-button .triangle-up {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid;
+  margin-left: 1px;
+}
+.card__available-info .card__quantity-selector .card__quantity-button .triangle-down {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid;
+  margin-left: 1px;
+}
+.card__available-info .card__quantity-selector .card__quantity-value {
+  font-size: 16px;
+  margin: 0 10px;
+}
+.card__available-info .card__quantity-selector .card__quantity-label {
+  font-size: 16px;
+  margin-right: 23px;
+}
+.card__available-info .card__quantity-selector .card__quantity-container {
+  display: flex;
+  border: 1px solid;
+}
 .card__tabs {
   display: flex;
   margin-left: 30px;
