--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -1,3 +1,4 @@
+
 .card {
   &__title {
     font-weight: 400;
@@ -104,16 +105,96 @@
     max-width:610px;
   }
 
+
+
+
+
+
+
   &__available-info {
 
-     span {
+   &  span {
       font-weight: 600;
       font-size: 18px;
       line-height: 28px;
       color:#28553F;
       margin-left: 8px;
      }
+
+
+     & .card__quantity-selector {
+      display: flex;
+      align-items: center;
+     
+      
+      & .card__quantity-button {
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #9c9c9c;
+        background-color: #fff;
+        cursor: pointer;
+        transition: background-color 0.2s;
+
+        &:hover {
+          background-color: #f0f0f0;
+        }
+
+
+        .triangle-up {
+          display: inline-block;
+          width: 0;
+          height: 0;
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-bottom: 10px solid;
+          margin-left:1px;
+        }
+
+        .triangle-down {
+          display: inline-block;
+          width: 0;
+          height: 0;
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-top: 10px solid;
+          margin-left:1px;
+      }
+      }
+
+      & .card__quantity-value {
+        font-size: 16px;
+        margin: 0 10px;
+      }
+
+      & .card__quantity-label {
+        font-size: 16px;
+        margin-right: 23px;
+      }
+
+      & .card__quantity-container {
+        display:flex;
+        border: 1px solid;
+
+      }
+    }
+  
   }
+
+
+
+
+
+
+
+
+
+
+
 
 
  &__tabs {
