--- a/src/css/main.css
+++ b/src/css/main.css
@@ -872,16 +872,20 @@ legend {
 .card__available-info .card__quantity-selector {
   display: flex;
   align-items: center;
+  margin-top: 35px;
+}
+.card__available-info .card__quantity-selector .card__quantity-button-wrapper {
+  align-self: center;
+  margin-right: 10px;
 }
 .card__available-info .card__quantity-selector .card__quantity-button {
-  width: 30px;
-  height: 30px;
+  width: 9px;
+  height: 7px;
   font-size: 20px;
   font-weight: bold;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #9c9c9c;
   background-color: #fff;
   cursor: pointer;
   transition: background-color 0.2s;
@@ -907,9 +911,16 @@ legend {
   border-top: 10px solid;
   margin-left: 1px;
 }
+.card__available-info .card__quantity-selector .card__quantity-button.card__quantity-button--increment {
+  margin-bottom: 5px;
+}
+.card__available-info .card__quantity-selector .card__quantity-button.card__quantity-button--decrement {
+  margin-top: 5px;
+}
 .card__available-info .card__quantity-selector .card__quantity-value {
   font-size: 16px;
-  margin: 0 10px;
+  margin-right: 17px;
+  align-self: center;
 }
 .card__available-info .card__quantity-selector .card__quantity-label {
   font-size: 16px;
@@ -917,7 +928,8 @@ legend {
 }
 .card__available-info .card__quantity-selector .card__quantity-container {
   display: flex;
-  border: 1px solid;
+  border: 1px solid #D7DADD;
+  padding: 12px 19px 12px 16px;
 }
 .card__tabs {
   display: flex;
