--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -125,17 +125,22 @@
      & .card__quantity-selector {
       display: flex;
       align-items: center;
+      margin-top:35px;
+
+      & .card__quantity-button-wrapper {
+        align-self: center;
+        margin-right: 10px;
+      }
      
       
       & .card__quantity-button {
-        width: 30px;
-        height: 30px;
+        width: 9px;
+        height: 7px;
         font-size: 20px;
         font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 1px solid #9c9c9c;
         background-color: #fff;
         cursor: pointer;
         transition: background-color 0.2s;
@@ -164,11 +169,20 @@
           border-top: 10px solid;
           margin-left:1px;
       }
+
+      &.card__quantity-button--increment {
+        margin-bottom: 5px;
+      }
+  
+      &.card__quantity-button--decrement {
+        margin-top: 5px;
+      }
       }
 
       & .card__quantity-value {
         font-size: 16px;
-        margin: 0 10px;
+        margin-right: 17px;
+        align-self:center;
       }
 
       & .card__quantity-label {
@@ -178,11 +192,13 @@
 
       & .card__quantity-container {
         display:flex;
-        border: 1px solid;
-
-      }
-    }
+        border: 1px solid #D7DADD;
+        padding: 12px 19px 12px 16px;
   
+
+      
+}
+}
   }
 
 
