--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -1,4 +1,3 @@
-
 .card {
   &__title {
     font-weight: 400;
@@ -95,44 +94,72 @@
   }
 
   &__actionblock {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     margin-left: 30px;
   }
 
   &__sliderbox {
     position: relative;
-    max-width:610px;
+    max-width: 610px;
   }
 
-
-
-
-
-
-
   &__available-info {
-
-   &  span {
+    & span {
       font-weight: 600;
       font-size: 18px;
       line-height: 28px;
-      color:#28553F;
-      margin-left: 8px;
-     }
+      color: #28553f;
+    }
 
+    &-price {
+      margin-top: 35px;
+      margin-bottom: 7px;
 
-     & .card__quantity-selector {
+      & .card__price-current {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 42px;
+        margin-right: 14px;
+      }
+
+      & .card__price-old {
+        font-weight: 400;
+        font-size: 23px;
+        line-height: 27px;
+        color: #9c9c9c;
+        text-decoration: line-through;
+        margin-right: 16px;
+      }
+
+      & .card__discount {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 25px;
+        color: white;
+        border: none;
+        background-color: #28553f;
+        padding: 8px 15px 8px 17px;
+      }
+    }
+
+    & .card__price-note {
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
+      color: #9c9c9c;
+    }
+
+    & .card__quantity-selector {
       display: flex;
       align-items: center;
-      margin-top:35px;
+      margin-top: 35px;
 
       & .card__quantity-button-wrapper {
         align-self: center;
         margin-right: 10px;
       }
-     
-      
+
       & .card__quantity-button {
         width: 9px;
         height: 7px;
@@ -149,7 +176,6 @@
           background-color: #f0f0f0;
         }
 
-
         .triangle-up {
           display: inline-block;
           width: 0;
@@ -157,7 +183,7 @@
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
           border-bottom: 10px solid;
-          margin-left:1px;
+          margin-left: 1px;
         }
 
         .triangle-down {
@@ -167,93 +193,82 @@
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
           border-top: 10px solid;
-          margin-left:1px;
-      }
+          margin-left: 1px;
+        }
 
-      &.card__quantity-button--increment {
-        margin-bottom: 5px;
-      }
-  
-      &.card__quantity-button--decrement {
-        margin-top: 5px;
-      }
+        &.card__quantity-button--increment {
+          margin-bottom: 5px;
+        }
+
+        &.card__quantity-button--decrement {
+          margin-top: 5px;
+        }
       }
 
       & .card__quantity-value {
         font-size: 16px;
         margin-right: 17px;
-        align-self:center;
+        align-self: center;
       }
 
       & .card__quantity-label {
-        font-size: 16px;
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 20px;
+        color: #282a30;
+
         margin-right: 23px;
       }
 
       & .card__quantity-container {
-        display:flex;
-        border: 1px solid #D7DADD;
+        display: flex;
+        border: 1px solid #d7dadd;
         padding: 12px 19px 12px 16px;
-  
-
-      
-}
-}
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
- &__tabs {
-  display:flex;
-  margin-left: 30px;
-  margin-right: 30px;
-  gap: 30px;
-  position:relative;
-
-  &::before {
-    content: ''; 
-    position: absolute; 
-    top: 35%; 
-    left: 0;  
-    right: 0; 
-    border:1px solid #e5e5e5;
-    z-index: 1; 
-  }
-
-  &-item {
-    flex: 1; 
-
-    & .card__tabs-desc {
-      margin-top: 50px; 
+      }
     }
   }
- }
 
- &__tabs-title {
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 25px;
-}
+  &__tabs {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 30px;
+    gap: 30px;
+    position: relative;
 
-&__tabs-desc {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 35%;
+      left: 0;
+      right: 0;
+      border: 1px solid #e5e5e5;
+      z-index: 1;
+    }
+
+    &-item {
+      flex: 1;
+
+      & .card__tabs-desc {
+        margin-top: 50px;
+      }
+    }
+  }
+
+  &__tabs-title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 25px;
+  }
+
+  &__tabs-desc {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+  }
 
   &__description-box {
     margin-left: 28px;
-    margin-top:75px;
+    margin-top: 75px;
   }
 
   &__description-heading {
