--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -154,6 +154,7 @@
       display: flex;
       align-items: center;
       margin-top: 35px;
+      margin-bottom: 30px;
 
       & .card__quantity-button-wrapper {
         align-self: center;
@@ -227,6 +228,34 @@
       }
     }
   }
+
+
+
+  &__characteristics-heading {
+    display: flex; 
+    align-items: center; 
+    margin-bottom: 15px; 
+    gap: 8px;
+
+    & h3 {
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    color: #282A30;
+    }
+  }
+
+
+  &__characteristics-show {
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid ; 
+    color:#28553F; 
+  }
+
+ 
 
   &__tabs {
     display: flex;
