--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -207,9 +207,12 @@
       }
 
       & .card__quantity-value {
-        font-size: 16px;
+        font-weight: 400;
+        font-size: 21px;
+        line-height: 31px;
         margin-right: 17px;
         align-self: center;
+        color: #424551;
       }
 
       & .card__quantity-label {
