--- a/src/css/main.css
+++ b/src/css/main.css
@@ -863,7 +863,7 @@ legend {
   max-width: 610px;
   margin-top: 23px;
 }
-.card__available-info span {
+.card__available-info-top {
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
@@ -971,6 +971,30 @@ legend {
   border: 1px solid #d7dadd;
   padding: 12px 19px 12px 16px;
 }
+.card__available-info-button {
+  display: inline-block;
+  margin-right: 35px;
+  text-align: center;
+}
+.card__available-info-button--consult {
+  border: none;
+  background-color: #28553F;
+  padding: 15px 58px 15px 58px;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 19px;
+}
+.card__available-info-button--order {
+  border: 1px solid #CACACA;
+  background-color: white;
+  padding: 15px 25px 15px 25px;
+  color: #28553F;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 19px;
+  margin-right: 0;
+}
 .card__characteristics-heading {
   display: flex;
   align-items: center;
@@ -994,27 +1018,26 @@ legend {
 .card__characteristics-box-list {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  margin-bottom: 15px;
 }
 .card__characteristics-box-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 30px;
-  margin-bottom: 10px;
+  gap: 60px;
 }
 .card__characteristics-box-label {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  color: #282A30;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 21px;
+  color: #282a30;
   width: 150px;
 }
 .card__characteristics-box-value {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  color: #424551;
+  font-size: 13px;
+  line-height: 47px;
+  color: #282a30;
   width: calc(100% - 194px);
 }
 .card__tabs {
