--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -106,7 +106,8 @@
   }
 
   &__available-info {
-    & span {
+
+    &-top {
       font-weight: 600;
       font-size: 18px;
       line-height: 28px;
@@ -231,6 +232,34 @@
         padding: 12px 19px 12px 16px;
       }
     }
+
+
+    &-button {
+      display: inline-block;
+      margin-right: 35px;
+      text-align: center;
+    }
+  
+    &-button--consult {
+      border: none;
+      background-color: #28553F;
+      padding: 15px 58px 15px 58px;
+      color: white;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 19px;
+    }
+  
+    &-button--order {
+      border: 1px solid #CACACA;
+      background-color: white;
+      padding: 15px 25px 15px 25px;
+      color: #28553F;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 19px;
+      margin-right: 0;
+    }
   }
 
 
@@ -264,32 +293,32 @@
     &-list {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      margin-bottom: 15px;
     }
   
     &-item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      gap: 30px;
-      margin-bottom: 10px;
+      gap: 60px;
     }
   
     &-label {
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 19px;
-      color: #282A30;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 21px;
+      color: #282a30;
       width: 150px;
     }
   
     &-value {
       font-weight: 400;
-      font-size: 16px;
-      line-height: 19px;
-      color: #424551;
+      font-size: 13px;
+      line-height: 47px;
+      color: #282a30;
       width: calc(100% - 194px); 
     }
+
   }
 
  
