--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -286,6 +286,14 @@
     border-bottom: 5px solid transparent;
     border-left: 5px solid ; 
     color:#28553F; 
+
+    &.active {
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid;
+    }
   }
 
 
